add: resoutces to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ res/letra-f.jpg
 res/imagen.jpg
 res/pokeico.ico
 res/notification_icon.png
+practicasReact/Sheet04/src/assets/pokeball.gif
+res/descarga.png
